# PyCamera

./: .gitignore  README.md  backend_util.py  edge_draw.py  gftt.py  gui_measure.py  main.py  my_graphicsview.py  q_icons.py  q_icons.qrc  requirements.txt  resize_graphicsview.py  take_photo.py  test.py  test_gui.py  uploadfiles.py
ArgusBind/: CMakeLists.txt  bindings.h  bindings.xml  cameraholder.cpp  cameraholder.h  macros.h  mainApp.pro
calib/: rectification.py
example/: camera_model.json
measure/: feature_desc.py  matcher.py  ruler.py
model/: camera_model.py
test/: test.py  test_gui.py
test_scp/: test_scp.py
